# IFB-Projet-Puissance-N

./: CMakeLists.txt  ajout_retrait_jetons.c  ajout_retrait_jetons.h  check_winner.c  check_winner.h  gestion_grille.c  gestion_grille.h  header_principal.h  jeu.c  jeu.h  main.c  ordinateur.c  ordinateur.h
